font visibility repair

--- a/public/assets/multip/css/style.css
+++ b/public/assets/multip/css/style.css
@@ -1136,7 +1136,17 @@ html {
 }
 
 .text-another {
-  color:  #0000FF;
+  color:  #00BBFF;
+
+    text-shadow:
+        0.05em 0 black,
+        0 0.05em black,
+        -0.05em 0 black,
+        0 -0.05em black,
+        -0.05em -0.05em black,
+        -0.05em 0.05em black,
+        0.05em -0.05em black,
+        0.05em 0.05em black;
 }
 
 .mbr-brand__name {
